# MIDI_PICO_ROUTER

./: CMakeLists.txt  tusb_config.h
.github/workflows/: build.yml
src/: main.c
